{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 121,
  "lineage": "b7b1ecb9-a5c1-449e-88b0-df56db5014fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_nat_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b76d6d4e8fede6d",
            "association_id": "eipassoc-075dc54a503537201",
            "domain": "vpc",
            "id": "eipalloc-08b76d6d4e8fede6d",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0cd7491fecdde1469",
            "private_dns": "ip-10-0-0-218.eu-central-1.compute.internal",
            "private_ip": "10.0.0.218",
            "public_dns": "ec2-3-69-68-1.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.68.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "soi-test-web-nat-eip",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "soi-test-web-nat-eip",
              "Project": "soi"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:internet-gateway/igw-05f8cd5687303ca73",
            "id": "igw-05f8cd5687303ca73",
            "owner_id": "923473058470",
            "tags": {
              "Name": "soi-test-internet-gateway",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "soi-test-internet-gateway",
              "Project": "soi"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "frontend_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b76d6d4e8fede6d",
            "connectivity_type": "public",
            "id": "nat-0b67ab907615d9d2b",
            "network_interface_id": "eni-0cd7491fecdde1469",
            "private_ip": "10.0.0.218",
            "public_ip": "3.69.68.1",
            "subnet_id": "subnet-09478bff62690010f",
            "tags": {
              "Name": "soi-test-web-nat",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "soi-test-web-nat",
              "Project": "soi"
            }
          },
          "dependencies": [
            "aws_eip.web_nat_elastic_ip",
            "aws_subnet.frontend_public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "frontend_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0afa05c8f3757779f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b67ab907615d9d2b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afa05c8f3757779f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.web_nat_elastic_ip",
            "aws_nat_gateway.frontend_nat",
            "aws_route_table.route_table_private",
            "aws_subnet.frontend_public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "frontend_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f8cd5687303ca73",
            "id": "r-rtb-049e2ee9826e9d82e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049e2ee9826e9d82e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table_public",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:route-table/rtb-0afa05c8f3757779f",
            "id": "rtb-0afa05c8f3757779f",
            "owner_id": "923473058470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b67ab907615d9d2b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "soi-test-web-route-table-private",
              "Project": "soi",
              "SubnetType": "private"
            },
            "tags_all": {
              "Name": "soi-test-web-route-table-private",
              "Project": "soi",
              "SubnetType": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:route-table/rtb-049e2ee9826e9d82e",
            "id": "rtb-049e2ee9826e9d82e",
            "owner_id": "923473058470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f8cd5687303ca73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "soi-test-route-table-public",
              "Project": "soi",
              "SubnetType": "public"
            },
            "tags_all": {
              "Name": "soi-test-route-table-public",
              "Project": "soi",
              "SubnetType": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081d6f221b9144fc5",
            "route_table_id": "rtb-0afa05c8f3757779f",
            "subnet_id": "subnet-0ce3aaece58171d69"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.frontend_private_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023de16a4b7a3154c",
            "route_table_id": "rtb-0afa05c8f3757779f",
            "subnet_id": "subnet-0e28eedaf19702389"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.frontend_private_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02645e8720009cafc",
            "route_table_id": "rtb-0afa05c8f3757779f",
            "subnet_id": "subnet-0cb1e141737ef0fb9"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.frontend_private_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9407a82c8c5f0e4",
            "route_table_id": "rtb-049e2ee9826e9d82e",
            "subnet_id": "subnet-09478bff62690010f"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.frontend_public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ed6709fffc2283b",
            "route_table_id": "rtb-049e2ee9826e9d82e",
            "subnet_id": "subnet-0280fc9190307c685"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.frontend_public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e17fce1b21b7986",
            "route_table_id": "rtb-049e2ee9826e9d82e",
            "subnet_id": "subnet-0c6c477b6c1a0d5ba"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.frontend_public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:security-group/sg-01d358ba86545773b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d358ba86545773b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "soi-test-api-security-group",
            "name_prefix": "",
            "owner_id": "923473058470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "soi"
            },
            "tags_all": {
              "Project": "soi"
            },
            "timeouts": null,
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:security-group/sg-024f1c7f413911a85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024f1c7f413911a85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d358ba86545773b",
                  "sg-06aebfd4235d57d9f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "soi-test-database-security-group",
            "name_prefix": "",
            "owner_id": "923473058470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "soi"
            },
            "tags_all": {
              "Project": "soi"
            },
            "timeouts": null,
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_security_group",
            "aws_security_group.vpn_access",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:security-group/sg-06aebfd4235d57d9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aebfd4235d57d9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VPN access",
            "name_prefix": "",
            "owner_id": "923473058470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "soi"
            },
            "tags_all": {
              "Project": "soi"
            },
            "timeouts": null,
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-015044566ab4ddff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015044566ab4ddff0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet eu-central-1a",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "Database Subnet eu-central-1a",
              "Project": "soi"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-00f35123bc4553f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f35123bc4553f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet eu-central-1b",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "Database Subnet eu-central-1b",
              "Project": "soi"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-0cdacd72e3c6e91f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.0.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdacd72e3c6e91f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet eu-central-1c",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "Database Subnet eu-central-1c",
              "Project": "soi"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-0ce3aaece58171d69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3aaece58171d69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soi-test-web-private-subnet-eu-central-1a",
              "Project": "soi",
              "SubnetType": "private"
            },
            "tags_all": {
              "Name": "soi-test-web-private-subnet-eu-central-1a",
              "Project": "soi",
              "SubnetType": "private"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-0e28eedaf19702389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e28eedaf19702389",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soi-test-web-private-subnet-eu-central-1b",
              "Project": "soi",
              "SubnetType": "private"
            },
            "tags_all": {
              "Name": "soi-test-web-private-subnet-eu-central-1b",
              "Project": "soi",
              "SubnetType": "private"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-0cb1e141737ef0fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb1e141737ef0fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soi-test-web-private-subnet-eu-central-1c",
              "Project": "soi",
              "SubnetType": "private"
            },
            "tags_all": {
              "Name": "soi-test-web-private-subnet-eu-central-1c",
              "Project": "soi",
              "SubnetType": "private"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-09478bff62690010f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09478bff62690010f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soi-test-web-public-subnet-eu-central-1a",
              "Project": "soi",
              "SubnetType": "public"
            },
            "tags_all": {
              "Name": "soi-test-web-public-subnet-eu-central-1a",
              "Project": "soi",
              "SubnetType": "public"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-0280fc9190307c685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.224/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0280fc9190307c685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soi-test-web-public-subnet-eu-central-1b",
              "Project": "soi",
              "SubnetType": "public"
            },
            "tags_all": {
              "Name": "soi-test-web-public-subnet-eu-central-1b",
              "Project": "soi",
              "SubnetType": "public"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:subnet/subnet-0c6c477b6c1a0d5ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6c477b6c1a0d5ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923473058470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soi-test-web-public-subnet-eu-central-1c",
              "Project": "soi",
              "SubnetType": "public"
            },
            "tags_all": {
              "Name": "soi-test-web-public-subnet-eu-central-1c",
              "Project": "soi",
              "SubnetType": "public"
            },
            "vpc_id": "vpc-05907d8bddc722c2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:923473058470:vpc/vpc-05907d8bddc722c2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0b1a479617f4cdfe6",
            "default_route_table_id": "rtb-0fcad8dca2e997c33",
            "default_security_group_id": "sg-0658ebfa48cc89597",
            "dhcp_options_id": "dopt-2a41c440",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05907d8bddc722c2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fcad8dca2e997c33",
            "owner_id": "923473058470",
            "tags": {
              "Name": "soi-test-vpc",
              "Project": "soi"
            },
            "tags_all": {
              "Name": "soi-test-vpc",
              "Project": "soi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}